<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/login_dialog_main_body"
              android:padding="10dp"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_userId"
                android:id="@+id/login_tv_userid"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="@color/buttonTextColor"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_et_user"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd"
                android:id="@+id/login_tv_pwd"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:textColor="@color/buttonTextColor"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_et_pwd"
                android:layout_weight="1"
                android:password="true"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberUserId"
                android:id="@+id/checkBoxRememberUserId"
                android:checked="true"
                android:textSize="25sp"
                android:textColor="@color/buttonTextColor"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoLogin"
                android:id="@+id/checkBoxAutoLogin"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:textColor="@color/buttonTextColor"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPwd"
            android:id="@+id/textView8"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:textColor="#ff97b5ff"
            android:layout_margin="10dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyAgreen"
                android:id="@+id/checkBoxAgreeLicense"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/textView9"
                android:checked="true"
                android:textColor="@color/buttonTextColor"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allRight"
                android:id="@+id/textView9"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textColor="#ff49c3ff"/>
    </RelativeLayout>


</LinearLayout>