<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"

             android:background="@drawable/bg"
                >
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                        android:id="@+id/tv_home_body_main"
                        android:layout_width="1080px"
                        android:layout_height="1834px">
                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body01"
                                android:background="@drawable/home_menu_01"
                                android:layout_marginLeft="110px"
                                android:layout_marginTop="582px"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu01"
                                        android:id="@+id/tv_home_menu_01"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:textColor="@color/menuTextColor"/>
                        </FrameLayout>
                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body02"
                                android:background="@drawable/home_menu_02"
                                android:layout_marginLeft="420px"
                                android:layout_marginTop="420px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu02"
                                        android:id="@+id/tv_home_menu_02"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:layout_gravity="left|top"
                                        android:textColor="@color/menuTextColor"/>
                        </FrameLayout>

                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body03"
                                android:background="@drawable/home_menu_03"
                                android:layout_marginLeft="760px"
                                android:layout_marginTop="582px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu03"
                                        android:id="@+id/tv_home_menu_03"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:layout_gravity="left|top"
                                        android:textColor="@color/menuTextColor"/>
                        </FrameLayout>

                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body04"
                                android:background="@drawable/home_menu_04"
                                android:layout_marginLeft="810px"
                                android:layout_marginTop="902px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu04"
                                        android:id="@+id/tv_home_menu_04"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:textColor="@color/menuTextColor"
                                        android:layout_gravity="left|top"/>
                        </FrameLayout>
                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body05"
                                android:background="@drawable/home_menu_05"
                                android:layout_marginLeft="650px"
                                android:layout_marginTop="1122px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu05"
                                        android:id="@+id/tv_home_menu_05"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:textColor="@color/menuTextColor"
                                        android:layout_gravity="left|top"/>
                        </FrameLayout>
                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body06"
                                android:background="@drawable/home_menu_06"
                                android:layout_marginLeft="250px"
                                android:layout_marginTop="1122px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu06"
                                        android:id="@+id/tv_home_menu_06"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:textColor="@color/menuTextColor"
                                        android:layout_gravity="left|top"/>
                        </FrameLayout>

                        <FrameLayout
                                android:layout_width="244px"
                                android:layout_height="248px"
                                android:id="@+id/tv_home_menu_body07"
                                android:background="@drawable/home_menu_07"
                                android:layout_marginLeft="80px"
                                android:layout_marginTop="902px"
                                android:layout_gravity="left|top"
                                android:textColor="#FFFFFFFF">

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/homeMenu07"
                                        android:id="@+id/tv_home_menu_07"
                                        android:layout_marginLeft="40px"
                                        android:layout_marginTop="160px"
                                        android:textColor="@color/menuTextColor"
                                        android:layout_gravity="left|top"/>
                        </FrameLayout>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/homeMenuButtonLeft"
                                android:id="@+id/tvHomeButtonLeft"
                                android:layout_gravity="left|top"
                                android:textSize="50px"
                                android:layout_marginLeft="110px"
                                android:layout_marginTop="1550px"
                                android:background="@drawable/home_button"
                                android:gravity="center"
                                android:padding="30px"
                                android:textColor="@color/buttonTextColor"
                                android:focusable="true"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/homeMenuButtonRight"
                                android:id="@+id/tvHomeButtonRight"
                                android:layout_gravity="left|top"
                                android:textSize="50px"
                                android:layout_marginLeft="810px"
                                android:layout_marginTop="1550px"
                                android:background="@drawable/home_button"
                                android:padding="30px"
                                android:gravity="center"
                                android:textColor="@color/buttonTextColor"
                                android:focusable="true"/>
                </FrameLayout>
        </ScrollView>

</FrameLayout>

